# s2.cpp

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: apply_local_patches.cmake
examples/csharp/: Program.cs  README.md  S2ExportApiExample.csproj
examples/golang/: README.md  go.mod  main.go
examples/python/: README.md  ctypes_export_api.py
include/: s2_audio.h  s2_backend.h  s2_codec.h  s2_config.h  s2_export_api.h  s2_generate.h  s2_log.h  s2_model.h  s2_pipeline.h  s2_prompt.h  s2_sampler.h  s2_tokenizer.h  s2_voice.h
openapi/: README.md  s2-openapi.yaml
patches/: ggml-conv-transpose-1d-grid-fix-loop-fix.patch  ggml-im2col-grid-fix.patch
src/: main.cpp  s2_audio.cpp  s2_codec.cpp  s2_export_api.cpp  s2_generate.cpp  s2_ggml_utils.h  s2_log.cpp  s2_model.cpp  s2_pipeline.cpp  s2_prompt.cpp  s2_sampler.cpp  s2_server.cpp  s2_tokenizer.cpp  s2_voice.cpp
